staticfiles/css/style.css
/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus {
    background: #222;
    color: white;
}

/* ------- Media Queries --------------- */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
        max-width: 80%;
    }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {

    .header-container {
        padding-top: 164px;
    }
}


html,
body {
    height: 100%;
    margin: 0;
}

body {
    margin-top: 0px;
    background-color: #ffffff;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: 200;
    font-size: 18px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
    overflow-x: hidden;
}

.alert {
    color: white;
    font-weight: bold;
    background-color: #28a745;
    padding: 10px;
    margin-top: 120px;
    text-align: center;
    border-radius: 5px;
    font-size: 16px;
}

hr {
    color: #0000ff;
    opacity: 0.5;
    width: 30%;
    margin: 0 auto;
    padding: 2px;
}

/* ------- Error Page Styles ------- */

/* Top Bar Styles */
.top-bar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: #000000ec;
    color: #fff;
    padding: 15px 0;
    z-index: 10;
    font-size: 16px;
    border-bottom: 1px solid #ffffff33;
    text-align: center;
}

.top-bar-text {
    margin: 0;
    font-weight: bold;
    letter-spacing: 1px;
}

header .navbar {
    margin-top: 60px;
}

/* ------search -------- */
.search-bar {
    position: relative;
    max-width: 100%;
    transition: all 0.3s ease-in-out;
}

.search-form {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
}

.search__input {
    width: 0;
    transition: width 0.3s ease-in-out;
}

.search__input.collapse.show {
    width: 250px;
}

button#closeSearch {
    display: none;
}

button#closeSearch.collapse.show {
    display: inline-block;
}

#searchButton, #custom-contact {
    color: #F3F5F5;
}

#searchButton:hover i,
#custom-contact:hover i{
    color: #bfa616;
}

.form-control:focus,
.btn:focus {
    outline: none;
    box-shadow: none;
}



/* ------- nav-bar styles ------- */


#logo img {
    width: 65px;
}

#logo {

    color: #001d5a;
    margin-right: 0;
    font-family: "Emilys Candy", serif;
    font-weight: 1000;
    letter-spacing: 1px;
    font-size: 24px;
    text-transform: uppercase;
}

#logo:hover {

    color: #bfa616;
}

.navbar {
    background-color: #F3F5F5;
}

.toggler-custom {
    border: none;
}

.toggler-custom i {
    font-size: 24px;
    color: #001d5a;
    transition: color 0.3s ease;
}

.toggler-custom:hover i {
    color: #bfa616;
}

.navbar-nav .nav-link {
    color: #001d5a;
    font-weight: bold;
    transition: color 0.3s ease;
}

.navbar-nav .nav-link:hover {
    color: #bfa616;
}

.navbar-nav .nav-link.active {
    color: #0000ff;
    opacity: 0.8;
}

.navbar-nav .dropdown-item {
    padding: 5px 10px;
    transition: color 0.3s ease;
    font-weight: bold;
}

.navbar-nav .dropdown-item:hover {
    color: #bfa616;
    background-color: #F3F5F5;
}

#navbarCollapse {
    text-align: end;
}

a.dropdown-item {
    text-align: center;
    background-color: transparent;
}

.nav-link.active {
    margin-bottom: 4px;
}

#user-options {
    color: #001d5a;
}

#user-options:hover {
    color: #bfa616;
    transition: color 0.3s ease;
}

#user-options:hover {
    color: #bfa616;
}

.navbar-nav .dropdown-menu {
    background-color: #ffffff;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: opacity 0.3s ease, transform 0.3s ease;
    opacity: 0;
    transform: translateY(-10px);
    visibility: hidden;
}

.navbar-nav .dropdown:hover .dropdown-menu {
    opacity: 1;
    transform: translateY(0);
    visibility: visible;
}

.navbar-nav .dropdown-menu .dropdown-item:hover {
    background-color: #bfa616;
    color: #fff;
}


/* -------- Hero Banner Styling -------- */

/* Carousel Styling */
.slider_section {
    position: relative;
    margin: 0 auto;
    width: 90%;
    margin-top: 150px;
}

.banner-img {
    width: 100%;
    height: auto;
    object-fit: cover;
}

.carousel-inner {
    border: 5px solid black;
    border-radius: 10px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
}

/* -------- footer ------ */

footer {
    margin-top: auto;
    padding: 10px 0;
}

.footer-container {
    width: 100%;
    background-color: #F3F5F5;
    color: #001d5a;
    padding: 10px 0 5px 0;
}

.social-links {
    display: flex;
    justify-content: center;
    text-align: center;
}

.footer .social-links i {
    color: #001d5a;
    font-size: 1.5rem;
    margin: 0 10px;
    text-decoration: none;
    transition: color 0.3s ease;
}

.footer .social-links i:hover {
    color: #bfa616;
}

.text-center .text-line {
    color: rgb(0, 0, 255);
    margin-top: 4px;
    opacity: 0.5;
}

.text-center p {
    font-size: 16px;
    margin-top: 2px;
    margin-bottom: 0px;
}


/* Responsive Adjustments */
@media (max-width: 768px) {

    .top-bar {
        padding: 10px;
        font-size: 12px;
    }

    .top-bar-text {
        padding-right: 10px;
    }

    .top-bar .form-inline {
        width: 100%;
        flex-shrink: 1;
        display: flex;
        align-items: center;
    }

    #searchButton {
        padding-left: 4px;
        padding-right: 0;
    }

    .search__input.collapse.show {
        width: 90px;
    }

    .dropdown-menu {
        max-height: 300px;
        overflow-y: auto;
        position: absolute;
        z-index: 1050;
    }
    
    .navbar-collapse {
        max-height: calc(100vh - 56px);
        overflow-y: auto;
    }

    .dropdown-menu {
        max-height: 60vh;
    }

    .navbar-collapse {
        max-height: 80vh;
    }

    .custom-nav {
        padding-bottom: 20px;
    }

}

